--- a/Stylesheet.css
+++ b/Stylesheet.css
@@ -120,7 +120,7 @@ body{
 .page-box {
     width: 36px;
     height: 36px;
-    color: #FFFFFF;
+    color: #8C96AB;
     font: normal normal 500 20px/30px Poppins, Medium;
     text-align: center;
     letter-spacing: 0px;
@@ -128,7 +128,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    background: #8C96AB 0% 0% no-repeat padding-box;
+    background:#FFFFFF 0% 0% no-repeat padding-box;
     border: 1px solid #8C96AB;
     border-radius: 7px;
     opacity: 1;
@@ -178,6 +178,7 @@ body{
     width: 208px;
     height: 35px;
     border: 1px solid #8C96AB;
+    color: #8C96AB;
     border-radius: 3px;
     opacity: 1;
 }
